testdata/golden/sema/valid/enum_basic.fmt
// Basic enum with auto-increment values

enum Color = {
    Red,
    Green,
    Blue
}

enum Status: uint8 = {
    Unknown = 0,
    Started = 1,
    Done = 2
}

fn test() {
    let c: int = Color::Red;
    let s: uint8 = Status::Done;
}
